--- a/app/src/main/res/layout/activity_first_app.xml
+++ b/app/src/main/res/layout/activity_first_app.xml
@@ -6,6 +6,28 @@
     android:layout_height="match_parent"
     android:id="@+id/main"
     tools:context=".FirstAppActivity">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:textSize="25sp"
+    android:textAlignment="center"
+    android:text="Escribe tu nombre"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="@+id/edtext"
+    app:layout_constraintTop_toTopOf="parent"
+    />
+    <EditText
+        android:id="@+id/edtext"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_margin="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btn"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn"
